# test-demo-project

./: .gitignore  databricks.yml  pyproject.toml
.github/workflows/: main.yml
conf/base/: catalog.yml  catalog_08_reporting.yml
conf/prod/: catalog.yml  databricks.yml
resources/: demo_project.yml  demo_project_data_ingestion.yml  demo_project_feature_engineering.yml  demo_project_modelling_stage.yml  demo_project_pre-modelling.yml  demo_project_reporting_stage.yml
src/demo_project/: pipeline_registry.py
src/demo_project/pipelines/data_ingestion/: pipeline.py
src/demo_project/pipelines/feature_engineering/: pipeline.py
src/demo_project/pipelines/reporting/: pipeline.py
