[project]
name = "modular_spaceflights"
version = "0.1.0"
description = "Kedro project with modular pipelines"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "ipython>=8.10",
    "jupyter~=1.0",
    "jupyter_client>=7.4.4",
    "jupyterlab>=3.0",
    "kedro[jupyter]~=0.19.11",
    "kedro-datasets[pandas.CSVDataset,pandas.ExcelDataset,pandas.ParquetDataset,plotly.PlotlyDataset]>=2.1.0",
    "nbstripout~=0.4",
    "pytest-cov~=2.5",
    "pytest-mock>=1.7.1,<2.0",
    "pytest~=6.2",
    "scikit-learn~=1.0",
    "wheel>=0.35,<0.37",
    "pillow>=9.0",
    "matplotlib==3.5.0",
    "pre-commit~=1.17",
    "ruff==0.7.0",
    "seaborn>=0.13.0",
]

[tool.kedro]
package_name = "demo_project"
project_name = "modular-spaceflights"
kedro_init_version = "0.19.0"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/demo_project -ra"""
